[gd_scene load_steps=5 format=3 uid="uid://bv7uvmqrlif1o"]

[ext_resource type="Script" uid="uid://cuxf146gdxxtl" path="res://voyage_phase_ui.gd" id="1_0gu06"]
[ext_resource type="Script" uid="uid://bmvrx26l1jd8" path="res://job_button.gd" id="2_8px1e"]
[ext_resource type="Script" uid="uid://dfocy35sxon1k" path="res://text_goods_label.gd" id="2_yvkpm"]
[ext_resource type="Script" uid="uid://cojf1q451fjsc" path="res://goods.gd" id="3_lykjh"]

[node name="Voyage Phase UI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0gu06")

[node name="Jobs" type="GridContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.1
anchor_top = 0.2
anchor_right = 0.9
anchor_bottom = 0.8
offset_right = 40.0
offset_bottom = 40.0
theme_override_constants/h_separation = 15
columns = 2

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="Jobs"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
ratio = 3.8438
stretch_mode = 0

[node name="Button" type="Button" parent="Jobs/AspectRatioContainer" node_paths=PackedStringArray("cost", "result")]
layout_mode = 2
text = "This is a job for your voyage"
script = ExtResource("2_8px1e")
cost = NodePath("Cost")
result = NodePath("Result")

[node name="Cost" type="Node" parent="Jobs/AspectRatioContainer/Button"]
script = ExtResource("3_lykjh")
crew = 1
metadata/_custom_type_script = "uid://cojf1q451fjsc"

[node name="Result" type="Node" parent="Jobs/AspectRatioContainer/Button"]
script = ExtResource("3_lykjh")
cloth = 4
metadata/_custom_type_script = "uid://cojf1q451fjsc"

[node name="AspectRatioContainer2" type="AspectRatioContainer" parent="Jobs"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
ratio = 3.8438
stretch_mode = 0

[node name="AspectRatioContainer3" type="AspectRatioContainer" parent="Jobs"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
ratio = 3.8438
stretch_mode = 0

[node name="AspectRatioContainer4" type="AspectRatioContainer" parent="Jobs"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
ratio = 3.8438
stretch_mode = 0

[node name="AspectRatioContainer5" type="AspectRatioContainer" parent="Jobs"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
ratio = 3.8438
stretch_mode = 0

[node name="AspectRatioContainer6" type="AspectRatioContainer" parent="Jobs"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
ratio = 3.8438
stretch_mode = 0

[node name="Goods" type="GridContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.1
anchor_top = 0.85
anchor_right = 0.9
anchor_bottom = 0.95
offset_right = 40.0
offset_bottom = 40.0
columns = 8

[node name="Crew Label" type="Label" parent="Goods"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 6
theme_override_font_sizes/font_size = 24
text = "X
X"
horizontal_alignment = 1
script = ExtResource("2_yvkpm")
initial = "c"

[node name="Munitions Label" type="Label" parent="Goods"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 6
theme_override_font_sizes/font_size = 24
text = "X
X"
horizontal_alignment = 1
script = ExtResource("2_yvkpm")
initial = "m"

[node name="Supplies Label" type="Label" parent="Goods"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 6
theme_override_font_sizes/font_size = 24
text = "X
X"
horizontal_alignment = 1
script = ExtResource("2_yvkpm")
initial = "s"

[node name="Booze Label" type="Label" parent="Goods"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 6
theme_override_font_sizes/font_size = 24
text = "X
X"
horizontal_alignment = 1
script = ExtResource("2_yvkpm")
initial = "B"

[node name="Cloth Label" type="Label" parent="Goods"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 6
theme_override_font_sizes/font_size = 24
text = "X
X"
horizontal_alignment = 1
script = ExtResource("2_yvkpm")
initial = "C"

[node name="Spices Label" type="Label" parent="Goods"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 6
theme_override_font_sizes/font_size = 24
text = "X
X"
horizontal_alignment = 1
script = ExtResource("2_yvkpm")
initial = "S"

[node name="Gold Label" type="Label" parent="Goods"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 6
theme_override_font_sizes/font_size = 24
text = "X
X"
horizontal_alignment = 1
script = ExtResource("2_yvkpm")
initial = "G"

[node name="Notoriety Label" type="Label" parent="Goods"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 6
theme_override_font_sizes/font_size = 24
text = "X
X"
horizontal_alignment = 1
script = ExtResource("2_yvkpm")
initial = "N"

[node name="VoyageButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.35
anchor_top = 0.05
anchor_right = 0.65
anchor_bottom = 0.15
offset_right = 8.0
offset_bottom = 8.0
text = "Voyage!"

[connection signal="enable_request" from="Jobs/AspectRatioContainer/Button" to="." method="_on_button_enable_request"]
[connection signal="pressed" from="Jobs/AspectRatioContainer/Button" to="Jobs/AspectRatioContainer/Button" method="_on_pressed"]
[connection signal="pressed" from="VoyageButton" to="." method="_on_voyage_button_pressed"]
